book from html to pdf

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="btn-groups container">
             <div class="row">
                 <div class="col-sm">
-                    <a class="btn btn-lg btn-book" href="pages/book.html" role="button">Читать книгу</a>
+                    <a class="btn btn-lg btn-book" href="pages/book.pdf" role="button">Читать книгу</a>
                 </div>
             </div>
             <div class="row">
